# ddrs

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  config-example.toml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: cache.rs  client.rs  config.rs  error.rs  ip.rs  ip_lookup.rs  main.rs  providers.rs
src/providers/: cloudflare.rs  duckdns.rs  porkbun.rs
