[package]
name = "ddrs"
version = "0.5.0"
edition = "2024"
license = "Apache-2.0"
description = "Dynamic DNS client"
homepage = "https://github.com/jakewmeyer/ddrs"
repository = "https://github.com/jakewmeyer/ddrs"
documentation = "https://docs.rs/ddrs"
keywords = ["ddns", "dynamic-dns", "ddclient", "dns", "networking"]
categories = ["command-line-utilities", "network-programming"]
readme = "README.md"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
clap = { version = "4.5.41", features = ["derive"] }
compact_str = { version = "0.9.0", features = ["serde"] }
dyn-clone = "1.0.19"
humantime-serde = "1.1.1"
local-ip-address = "0.6.5"
reqwest = { version = "0.12.22", features = [
  "http2",
  "charset",
  "json",
  "zstd",
  "brotli",
  "rustls-tls",
], default-features = false }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.141"
smallvec = { version = "1.15.1", features = ["serde"] }
tokio = { version = "1.46.1", features = [
  "rt",
  "rt-multi-thread",
  "time",
  "signal",
  "macros",
  "parking_lot",
] }
tokio-util = { version = "0.7.15", features = ["rt"] }
toml = "0.9.2"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = "0.3.19"
typetag = "0.2.20"
url = { version = "2.5.4", features = ["serde"] }

[profile.release]
strip = true
lto = true
codegen-units = 1

[dev-dependencies]
wiremock = "0.6.4"
