[package]
name = "ddrs"
version = "0.6.0"
edition = "2024"
license = "Apache-2.0"
description = "Dynamic DNS client"
homepage = "https://github.com/jakewmeyer/ddrs"
repository = "https://github.com/jakewmeyer/ddrs"
documentation = "https://docs.rs/ddrs"
keywords = ["ddns", "dynamic-dns", "ddclient", "dns", "networking"]
categories = ["command-line-utilities", "network-programming"]
readme = "README.md"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = "0.4.42"
clap = { version = "4.5.50", features = ["derive"] }
compact_str = { version = "0.9.0", features = ["serde"] }
crc32fast = "1.5.0"
dyn-clone = "1.0.20"
humantime-serde = "1.1.1"
local-ip-address = "0.6.5"
reqwest = { version = "0.12.24", features = [
  "http2",
  "charset",
  "json",
  "zstd",
  "brotli",
  "rustls-tls",
], default-features = false }
reqwest-middleware = { version = "0.4.2", features = ["charset", "http2", "json", "rustls-tls"] }
reqwest-retry = "0.7.0"
rmp-serde = "1.3.0"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive", "serde_derive"] }
serde_json = "1.0.145"
smallvec = { version = "1.15.1", features = ["serde"] }
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = [
  "rt",
  "rt-multi-thread",
  "time",
  "signal",
  "fs",
  "macros",
  "parking_lot",
] }
tokio-util = { version = "0.7.16", features = ["rt"] }
toml = "0.9.8"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = "0.3.20"
typetag = "0.2.21"
url = { version = "2.5.7", features = ["serde"] }

[profile.release]
strip = true
lto = true
codegen-units = 1

[dev-dependencies]
wiremock = "0.6.5"
