[package]
name = "ddrs"
version = "0.6.0"
edition = "2024"
license = "Apache-2.0"
description = "Dynamic DNS client"
homepage = "https://github.com/jakewmeyer/ddrs"
repository = "https://github.com/jakewmeyer/ddrs"
documentation = "https://docs.rs/ddrs"
keywords = ["ddns", "dynamic-dns", "ddclient", "dns", "networking"]
categories = ["command-line-utilities", "network-programming"]
readme = "README.md"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
compact_str = { version = "0.9.0", features = ["serde"] }
crc32fast = "1.5.0"
dyn-clone = "1.0.20"
humantime-serde = "1.1.1"
local-ip-address = "0.6.13"
reqwest = { version = "0.13.3", features = [
  "query",
  "http2",
  "charset",
  "json",
  "zstd",
  "brotli",
  "rustls",
], default-features = false }
reqwest-middleware = { version = "0.5.2", features = [
  "query",
  "charset",
  "http2",
  "json",
  "rustls",
] }
reqwest-retry = "0.9.1"
rmp-serde = "1.3.1"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive", "serde_derive"] }
serde_json = "1.0.149"
smallvec = { version = "1.15.1", features = ["serde"] }
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = [
  "rt",
  "rt-multi-thread",
  "time",
  "signal",
  "fs",
  "macros",
  "parking_lot",
] }
tokio-util = { version = "0.7.18", features = ["rt"] }
toml = "1.1.2"
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = "0.3.23"
typetag = "0.2.22"
url = { version = "2.5.8", features = ["serde"] }

[profile.release]
strip = true
lto = true
codegen-units = 1

[dev-dependencies]
wiremock = "0.6.5"
